fix(palettes): wrong color for variant 500

--- a/sass/color/_functions.scss
+++ b/sass/color/_functions.scss
@@ -135,11 +135,13 @@ $_enhanced-accessibility: false;
         $len: list.length($lmap);
         $i: list.index(map.keys($lmap), $shade);
         $l: list.nth(map.values($lmap), if($lum > 0.5, $len - $i + 1, $i));
+        $hsl: hsl(from var(--ig-#{$name}-500) h s $l);
 
-        @return (
-            raw: hsl(to-fixed(color.hue($color)), to-fixed(color.saturation($color)), $l),
-            hsl: hsl(from var(--ig-#{$name}-500) h s $l)
-        );
+        @if #{$shade} == '500' {
+            $hsl: #{$h, $s, $l};
+        }
+
+        @return (raw: hsl(to-fixed(color.hue($color)), to-fixed(color.saturation($color)), $l), hsl: $hsl);
     } @else {
         $sx: map.get(multipliers.$color, 's', $shade);
         $lx: map.get(multipliers.$color, 'l', $shade);
@@ -148,7 +150,11 @@ $_enhanced-accessibility: false;
             to-fixed(color.saturation($color) * $sx),
             to-fixed(color.lightness($color) * $lx)
         );
-        $hsl: hsl(from var(--ig-#{$name}-500) h calc(s * #{$sx}) calc(l * #{$lx}));
+        $hsl: #{hsl(from var(--ig-#{$name}-500) h calc(s * #{$sx}) calc(l * #{$lx}))};
+
+        @if #{$shade} == '500' {
+            $hsl: #{$h, calc(#{$s} * #{$sx}), calc(#{$l} * #{$lx})};
+        }
 
         @return (raw: $raw, hsl: $hsl);
     }
