--- a/test/_color.spec.scss
+++ b/test/_color.spec.scss
@@ -237,11 +237,19 @@ $_palette: palette(
                         --ig-gray-l: #{math.round(color.lightness($gray-500))};
                         --ig-gray-a: #{math.round(color.alpha($gray-500))};
                         --ig-primary-500:
-                            #{hsl(from var(--ig-primary-500) h calc(s * 1) calc(l * 1))};
+                            #{var(--ig-primary-h),
+                            calc(var(--ig-primary-s) * 1),
+                            calc(var(--ig-primary-l) * 1)};
                         --ig-primary-500-contrast: #{contrast-color($_palette, primary, 500)};
+                        --ig-primary-600: 
+                            #{hsl(from var(--ig-primary-500) h calc(s * 1.26) calc(l * 0.89))};
                         --ig-gray-500:
-                            #{hsl(from var(--ig-gray-500) h s #{math.round(color.lightness($gray-500))})};
+                            #{var(--ig-gray-h),
+                            var(--ig-gray-s),
+                            #{math.round(color.lightness($gray-500))}};
                         --ig-gray-500-contrast: #{contrast-color($_palette, gray, 500)};
+                        --ig-gray-600: 
+                            #{hsl(from var(--ig-gray-500) h s 54%)};
                     }
                 }
             }
